Registry the Update to a better way.

--- a/html/manageCups.html
+++ b/html/manageCups.html
@@ -107,7 +107,7 @@
 
                         <div class="row pb-2">
                             <div class="col-12">
-                                <input type="text" class="form-control" placeholder="ID" aria-label="ID"
+                                <input type="number" class="form-control" placeholder="ID" aria-label="ID"
                                     aria-describedby="inputGroup-sizing-default" name="idEdit" id="idEdit" readonly>
                             </div>
                         </div>
